WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212419
Incorrect clipping of absolute and fixed elements inside stacking-context composited overflow:hidden
https://bugs.webkit.org/show_bug.cgi?id=212419
Summary
Incorrect clipping of absolute and fixed elements inside stacking-context com...
Antti Koivisto
Reported
2020-05-27 11:03:48 PDT
See the test case.
Attachments
test
(441 bytes, text/html)
2020-05-27 11:04 PDT
,
Antti Koivisto
no flags
Details
patch
(13.43 KB, patch)
2020-05-27 11:14 PDT
,
Antti Koivisto
simon.fraser
: review+
Details
Formatted Diff
Diff
patch
(15.18 KB, patch)
2020-05-27 23:21 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2020-05-27 11:04:24 PDT
Created
attachment 400351
[details]
test
Antti Koivisto
Comment 2
2020-05-27 11:05:27 PDT
<
rdar://problem/55856170
>
Antti Koivisto
Comment 3
2020-05-27 11:14:24 PDT
Created
attachment 400352
[details]
patch
Simon Fraser (smfr)
Comment 4
2020-05-27 12:09:35 PDT
Comment on
attachment 400352
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=400352&action=review
> LayoutTests/compositing/overflow/non-contained-descendant-clipping-fixed.html:4 > +body { > + height: 2000px; > +}
Is this necessary?
Antti Koivisto
Comment 5
2020-05-27 12:12:38 PDT
> Is this necessary?
Not for the test runner but useful for manual testing.
Antti Koivisto
Comment 6
2020-05-27 23:21:30 PDT
Created
attachment 400430
[details]
patch
EWS
Comment 7
2020-05-28 01:14:03 PDT
Committed
r262237
: <
https://trac.webkit.org/changeset/262237
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400430
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug