Incorrect clipping of absolute and fixed elements inside stacking-context composited overflow:hidden https://bugs.webkit.org/show_bug.cgi?id=212419 <rdar://problem/55856170>

Reviewed by Simon Fraser.

Source/WebCore:

We incorrectly clip descendants that are not in containing block chain.
There is already code to do the correct clipping, it just needs be enabled in this case.

Tests: compositing/overflow/non-contained-descendant-clipping-absolute.html
       compositing/overflow/non-contained-descendant-clipping-fixed.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::RenderLayer):
* rendering/RenderLayer.h:

Add hasCompositedNonContainedDescendants bit.

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::CompositingState::stateForPaintOrderChildren const):
(WebCore::RenderLayerCompositor::CompositingState::updateWithDescendantStateAndLayer):

Check if the parent layer is for a containing block of this layer.

(WebCore::RenderLayerCompositor::computeCompositingRequirements):

Update the bit.

(WebCore::RenderLayerCompositor::traverseUnchangedSubtree):
(WebCore::RenderLayerCompositor::clipsCompositingDescendants):

Pick the clipping path where descendants are not clipped.

LayoutTests:

* compositing/overflow/non-contained-descendant-clipping-absolute-expected.html: Added.
* compositing/overflow/non-contained-descendant-clipping-absolute.html: Added.
* compositing/overflow/non-contained-descendant-clipping-fixed-expected.html: Added.
* compositing/overflow/non-contained-descendant-clipping-fixed.html: Added.


Canonical link: https://commits.webkit.org/225296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262237 268f45cc-cd09-0410-ab3c-d52691b4dbfc